<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_test001"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.alwaysdata.woyanoro.usagino4g.MainActivity"
    android:background="@color/colorWithe">

    <TextView
        android:id="@+id/maintxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="#0000FF"
        android:text="@string/header"
        android:textColorHint="@color/colorGrey"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:text="@string/html_begin"
        android:layout_below="@+id/maintxt"
        android:id="@+id/editURL"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrey"/>

    <CheckBox
        android:text="@string/simplify_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editURL"
        android:checked="true"
        android:id="@+id/simplifybox"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrey"/>

    <CheckBox
        android:text="@string/zero_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/simplifybox"
        android:checked="true"
        android:id="@+id/zerobox"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrey"/>

    <Button
        android:text="@string/browse_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_browse"
        android:layout_above="@+id/button_parametres"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrey"/>

    <Button
        android:text="@string/parametres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_parametres"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/phonenum"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/editPassword"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/editPhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColorHint="@color/colorGrey"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text=""
        android:id="@+id/editPhone"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/zerobox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColorHint="@color/colorGrey"/>

</RelativeLayout>

